# prime-multiplication

./: prime-multiplication.cabal
app/: Main.hs
src/: MultiplicationTable.hs  Prime.hs
test/: MultiplicationTableSpec.hs  PrimeSpec.hs  Spec.hs
