name:                prime-multiplication
version:             0.1.0.0
synopsis:            Initial project template from stack
license-file:        LICENSE
author:              James Vanneman
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prime, MultiplicationTable
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable prime-multiplication-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prime-multiplication
  default-language:    Haskell2010

test-suite prime-multiplication-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prime-multiplication
                     , hspec >= 2.2.4 && < 2.3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/prime-multiplication
